--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,5 +1,5 @@
 db.driver=org.postgresql.Driver
 db.user=postgres
 db.password=postgres
-db.url=jdbc:mysql://localhost:5432/postgres?currentSchema=pay4j
+db.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=pay4j
 db.pool.size=8
