--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,8 +1,7 @@
-log4j.rootLogger=INFO, file
+log4j.rootLogger=INFO, console
 
-log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.file.File=${catalina.home}/logs/payment_log.log
-log4j.appender.file.MaxFileSize=1MB
-log4j.appender.file.DatePattern='.'yyyy-MM-dd'.log'
-log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%M %L - %m%n
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.Threshold=INFO
+log4j.appender.console.Target=System.out
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%M %L - %m%n
